test/instance-checks-9.err.expect
test/instance-checks-9.ktn:1:1: error: cannot solve scalar type constraint Int (input to example) = t1 (type of x)
test/instance-checks-9.ktn:1:1: note: t1 (type of x) is from here
test/instance-checks-9.ktn:1:13: note: Int (input to example) is from here
