test/instance-checks-9.ktn
def example (Int a -> a a): ->{x y} x y
